--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 		<artifactId>commons-codec</artifactId>
 		<version>1.2</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>1.3.2</version>
+	</dependency>
 		
 	<!-- Salesforce -->
 	<dependency>
